tests/evaluator/should_fail/map1.csp
test1 = mapLookup(emptyMap, 1)
